--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.5.8"
   },
   "devDependencies": {
+    "@types/node": "20.16.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "^5.6.2",
     "vite": "^5.4.7",
